--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="explore__content">
                 <div class="item">
                     <div class="img">
-                        <img src="/dinara1/imgs/img-1.jpg" alt="">
+                        <img src="/imgs/img-1.jpg" alt="">
                     </div>
                     <div class="item__title">
                         <h3>Excuture Sint</h3>
@@ -56,7 +56,7 @@
 
                 <div class="item">
                     <div class="img">
-                        <img src="/dinara1/imgs/img-2.jpg" alt="">
+                        <img src="/imgs/img-2.jpg" alt="">
                     </div>
                     <div class="item__title">
                         <h3>Robert Jr Downy</h3>
@@ -68,7 +68,7 @@
 
                 <div class="item">
                     <div class="img">
-                        <img src="/dinara1/imgs/img-3.jpg" alt="">
+                        <img src="/imgs/img-3.jpg" alt="">
                     </div>
                     <div class="item__title">
                         <h3>Chris Hevonson</h3>
@@ -91,7 +91,7 @@
         <div class="journal__content">
             <div class="item">
                 <div class="img">
-                    <img src="/dinara1/imgs/blog-1.jpg" alt="">
+                    <img src="/imgs/blog-1.jpg" alt="">
                 </div>
                 <div class="item__title">
                     <span>30 June 2023</span>
@@ -102,7 +102,7 @@
 
             <div class="item">
                 <div class="img">
-                    <img src="/dinara1/imgs/blog-2.jpg" alt="">
+                    <img src="/imgs/blog-2.jpg" alt="">
                 </div>
                 <div class="item__title">
                     <span>30 June 2023</span>
